--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server",
-    "start:dev": "nodemon server"
+    "proxy-ec2": "bash login.sh",
+    "start:dev": "nodemon server",
+    "stress-test": "artillery run server/stress-test.json"
   },
   "keywords": [],
   "author": "",
@@ -17,9 +19,11 @@
   "dependencies": {
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.6",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "newrelic": "^7.0.2"
   },
   "devDependencies": {
+    "artillery": "^1.6.1",
     "eslint": "^7.13.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
